--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=0.10.20"
   },
   "dependencies": {
-    "ws": "git://github.com/carck/ws.git",
+    "ws": "git://github.com/carck/ws.git#v0.8.1",
     "binarypack": ">=0.0.4",
     "streamers": ">=0.1.0"
   },
